# Starr

./: .gitignore  Dockerfile  README.md  config.toml.example  docker-compose.yaml  justfile  launch.py  pyproject.toml  requirements.txt  schema.sql
starr/: client.py
starr/cogs/: admin.py  config.py
